--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/base.html
@@ -28,8 +28,9 @@
         
         {% for message in messages %}
         <div class="alert-message">
+
             {{message}}
-            <button type="button" class="close-message">x</button>
+            <p class="close-message">&times;</p>
           </div>
         {% endfor %}
             
