--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/category.html
@@ -9,7 +9,7 @@
 {% block content %}
 {% include 'store/include/hero.html' %}
 <section>
-    <h3 class="section-title">{{ category.name}}' Category</h3>
+    <h3 class="section-title">{{ category.name}}'s Category</h3>
     <div class= "product-container">
         
         {% for product in products %}
