--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/all_categories.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/all_categories.html
@@ -7,7 +7,7 @@
 
     
 {% block content %}
-<h3 class="section-title">All Category</h3>
+<h3 class="section-title">Product Categories</h3>
 
 {% for category in categories %}
     <p><a href="{% url 'category' category.id %}" style="color: white;">{{category.name}}</a></p>
