modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/register.html 	new file:   15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_user.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/urls.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_user.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_user.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Register
+    Update User Details
 {% endblock title %}
     
 
@@ -10,7 +10,7 @@
 {% block content %}
 <!-- Register form -->
 <div class="form-container">
-    <form action="{% url 'register' %}" method="post" class="register-form">
+    <form action="{% url 'update_user' %}" method="post" class="register-form">
         {% csrf_token %}
         <div class="img">
             <span id="close-signup-form" class="close"><a href="{% url 'home' %}">&times;</a></span>
@@ -19,7 +19,7 @@
         <div class="login-container">
             {{ form }}
 
-            <button type="submit">Register</button>
+            <button type="submit">Update Details</button>
             
         </div>
         <div class="login-container">
