modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_user.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_user.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_user.html
@@ -17,7 +17,7 @@
             <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
         </div>
         <div class="login-container">
-            {{ form }}
+            {{ user_form }}
 
             <button type="submit">Update Details</button>
             
