modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/forms.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/urls.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/forms.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/urls.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/views.py 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/db.sqlite3 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -51,6 +51,8 @@
                         <div class="dropdown-content">
                             {% if user.is_authenticated %}
                             <a href="{% url 'logout' %}" class="login-button" id="login-button">Logout</a>
+                            <hr>
+                            <a href="{% url 'update_user' %}" class="login-button" id="login-button">Profile</a>
                             {% else %}
                             <a href="{% url 'login' %}" class="login-button" id="login-button">Login</a>
                             <hr>
