--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_password.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/update_password.html
@@ -10,17 +10,17 @@
 {% block content %}
 <!-- Register form -->
 <div class="form-container">
-    <form action="{% url 'update_user' %}" method="post" class="register-form">
+    <form action="{% url 'update_password' %}" method="post" class="register-form">
         {% csrf_token %}
         <div class="img">
             <span id="close-signup-form" class="close"><a href="{% url 'home' %}">&times;</a></span>
             <img src="{% static 'images/avatar.png' %}" alt="avatar" class="avatar" width="20%"> 
         </div>
         <div class="login-container">
-            {{ user_form }}
+            {{ form }}
 
-            <button type="submit">Update Details</button>
-            <button type="submit"><a href="{% url 'update_password' %}">Update Password</a></button>
+            <button type="submit">Update Password</button>
+            
         </div>
         <div class="login-container">
             <button type="button" class="cancelbtn" id="cancel-signup-button"><a href="{% url 'home' %}">Cancel</a></button>
