--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -53,6 +53,7 @@
                             <a href="{% url 'logout' %}" class="login-button" id="login-button">Logout</a>
                             <hr>
                             <a href="{% url 'update_user' %}" class="login-button" id="login-button">Profile</a>
+                            <a href="{% url 'update_info' %}" class="login-button" id="login-button">My Info</a>
                             {% else %}
                             <a href="{% url 'login' %}" class="login-button" id="login-button">Login</a>
                             <hr>
