modified:   15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html

--- a/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/store/templates/store/include/navbar.html
@@ -52,8 +52,7 @@
                             {% if user.is_authenticated %}
                             <a href="{% url 'logout' %}" class="login-button" id="login-button">Logout</a>
                             <hr>
-                            <a href="{% url 'update_user' %}" class="login-button" id="login-button">Profile</a>
-                            <a href="{% url 'update_info' %}" class="login-button" id="login-button">My Info</a>
+                            <a href="{% url 'user_profile' %}" class="login-button" id="login-button">Profile</a>
                             {% else %}
                             <a href="{% url 'login' %}" class="login-button" id="login-button">Login</a>
                             <hr>
