--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/user_profile.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/user_profile.html
@@ -33,7 +33,7 @@
         <section>
             <h1 class="inventory-headings">name</h1>
             <a href="{% url 'update_user' %}" class="login-button" id="login-button">Update User</a>
-            <a href="{% url 'update_info' %}" class="login-button" id="login-button">My User Info</a>
+            <a href="{% url 'update_info' %}" class="login-button" id="login-button">Billing Information</a>
             
         </section>
         </div>
