modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/user_profile.html 	modified:   15. Django- Ecommerce Website v3/ecommerce_website/core/views.py

--- a/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/user_profile.html
+++ b/15. Django- Ecommerce Website v3/ecommerce_website/core/templates/core/user_profile.html
@@ -34,7 +34,7 @@
             <h1 class="inventory-headings">name</h1>
             <a href="{% url 'update_user' %}" class="login-button" id="login-button">Update User</a>
             <a href="{% url 'update_info' %}" class="login-button" id="login-button">Billing Information</a>
-            
+            <a href="{% url 'shipping_info' %}" class="login-button" id="login-button">Shipping Information</a>
         </section>
         </div>
 
