modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/db.sqlite3 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/hero.css 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/main.css 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/models.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/hero.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/views.py

--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/hero.css
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/hero.css
@@ -1,8 +1,8 @@
 header .hero-header{
-    background-image: url(banner.jpg);
+    /* background-image: url(banner.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
     height: 40vh;
     display: flex;
     justify-content: center;
