modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/db.sqlite3 	new file:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/media/uploads/banners/Gray_Minimalist_New_Collection_Banner_6odXlIw.png 	new file:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/media/uploads/banners/Gray_Minimalist_New_Collection_Banner_objKyUG.png 	new file:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/media/uploads/banners/Gray_Minimalist_New_Collection_Banner_yJtbM2y.png 	new file:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/media/uploads/banners/text5.png 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/hero.css 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	new file:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/migrations/0015_webbanner_in_use.py 	new file:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/migrations/__pycache__/0015_webbanner_in_use.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/models.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/hero.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/views.py

--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/hero.css
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/hero.css
@@ -1,9 +1,9 @@
 header .hero-header{
-    /* background-image: url(banner.jpg);
+    background-image: url('{{ bannerImageUrl }}');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover; */
-    height: 40vh;
+    background-size: cover;
+    height: 50vh;
     display: flex;
     justify-content: center;
     align-items: center;
