--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/hero.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/hero.html
@@ -2,9 +2,9 @@
     <div class="hero-header">
         <h1>Bella Online Shop</h1>
         
-        {% for banner in banner %}
-        <div class="image"><img src="{{ banner.imageURL }}" alt="Banner" width="100%"></div> 
-        {% endfor %}
+        <!-- {% for banner in banners %}
+        <img src="{{ banner.imageURL }}" alt="Banner" width="100%">
+        {% endfor %} -->
             
         
     </div>
