modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/static/css/hero.css 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/__pycache__/views.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/hero.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/views.py

--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/hero.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/hero.html
@@ -1,10 +1,8 @@
 <header>
     <div class="hero-header">
-        <!-- <h1>Bella Online Shop</h1> -->
+        <h1>Bella Online Shop</h1>
         
-        {% for banner in banners %}
-        <img src="{{ banner.imageURL }}" alt="Banner" width="100%">
-        {% endfor %}
+        
         
             
         
