modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/__pycache__/models.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/models.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/product_card.html

--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/product_card.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/store/templates/store/include/product_card.html
@@ -28,6 +28,7 @@
         <p class="star">&#9734;&#9734;&#9734;&#9734;&#9734;</p>
         {% else %}
         <h3 style="color: red;">Out of stock!!!</h3>
+        <p class="star">&#9734;&#9734;&#9734;&#9734;&#9734;</p>
         {% endif %} 
         {% endif %} 
         <div class="card-btn">
@@ -38,9 +39,6 @@
             {% else %}
             <button type="button" value="{{ product.id }}" class="add-to-cart" disabled>Add to Cart <title>Out of stock</title></button>
             {% endif %}
-                
-            
-
         </div>
     </div>
     {% if product.is_sale %}
