modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html

--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html
@@ -63,7 +63,7 @@
                 }),
                 success: function(response) {
                     $('#message').text('Registration successful');
-                    window.location.href = '/login/'; // Redirect to login or another page
+                    window.location.href = '../login'; // Redirect to login or another page
                 },
                 error: function(response) {
                     $('#message').text('Registration failed: ' + response.responseText);
