--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html
@@ -57,6 +57,7 @@
                 },
                 error: function(response) {
                     $('#message').text('Login failed: ' + response.responseText);
+                    window.location.href = '../register'; 
                 }
             });
         });
