modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/api/__pycache__/urls.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/api/urls.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/__pycache__/urls.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/__pycache__/views.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/urls.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/views.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/db.sqlite3 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/__pycache__/settings.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/__pycache__/urls.cpython-311.pyc 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/settings.py 	modified:   18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/ecommerce_website/urls.py

--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/register.html
@@ -37,10 +37,10 @@
         </div>
         <div class="login-container">
             <button type="button" class="cancelbtn" id="cancel-signup-button"><a href="{% url 'home' %}">Cancel</a></button>
-            <span class="password">Already have accout? <a href="{%url 'login' %}">Login.</a></span>
+            <span class="password">Already have accout? <a href="{% url 'login' %}">Login.</a></span>
         </div>
     </form>
-    <div id="message"></div>
+    <!-- <div id="message"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $('#register-form').on('submit', function(event) {
@@ -70,7 +70,7 @@
                 }
             });
         });
-    </script>
+    </script> -->
 
 
     
