--- a/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html
+++ b/18. Ecommerce App - FlutterAndDjango/Web_Backend_API/ecommerce_website/core/templates/core/login.html
@@ -36,7 +36,7 @@
         
     </form>
 
-    <div id="message"></div>
+    <!-- <div id="message"></div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $('#login-form').on('submit', function(event) {
@@ -61,7 +61,7 @@
                 }
             });
         });
-    </script>
+    </script> -->
 </div>
 {% endblock content %}
     
